@@ -17,6 +17,10 @@
    - markus@cvs.openbsd.org 2008/02/20 15:25:26
      [session.c]
      correct boolean encoding for coredump; der Mouse via dugsong
+   - djm@cvs.openbsd.org 2008/02/22 05:58:56
+     [session.c]
+     closefrom() call was too early, delay it until just before we execute
+     the user's rc files (if any).
 
 20080302
  - (dtucker) [configure.ac] FreeBSD's glob() doesn't behave the way we expect
@@ -3677,4 +3681,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4854 2008/03/07 07:32:42 djm Exp $
+$Id: ChangeLog,v 1.4855 2008/03/07 07:33:12 djm Exp $
